# Luce

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  GOVERNANCE.md  README.md  partitions.csv  platformio.ini  sdkconfig
.agent/tmp/: governance-align-result.json  governance-structure-report.json  governance-structure-report.md
.agent/tmp/skills/SKILL-005/: git-changes.json  run.json  write-scope-violations.json
.agent/tmp/skills/SKILL-006/: git-changes.json  run.json
.codex/: system.md
components/luce_mdns/: CMakeLists.txt
data/pcb/: Lights.kicad_prl
data/src/: CMakeLists.txt  bitfield.h  cli.h  cli_cmd.cpp  config.h  eventBus.cpp  eventBus.h  http.cpp  http.h  leds.h  logger.cpp  logger.h  main.cpp  mqtt.h  ota.h  probes.cpp  settings.h  watchdog.h
data/webapp/: app.css
doc/: CLI.md  architecture.md  hardware-map.md  ntp.md
docs/: agents.md
docs/dev/: README.md  hardware-map.md
docs/governance/audit/: README.md  code-docs.md  code-tests.md  docs-tests.md  governance-chain-status.md  governance-structure-report.json  governance-structure-report.md  index.md  npm-applicability.md  prompt-scope-loader-check.md  structure-conformance.md  tests-current-state.md  tests-simplification-plan.md
docs/governance/audit/skills/SKILL-005/: git-changes.json  run.json
docs/governance/compliance/: scorecard-2026-02-20.md  scorecard-2026-02-22.md  scorecard-2026-02-23.md  scorecard-current.md
docs/governance/compliance/archive/: scorecard-2026-02-20.md
docs/governance/health/: build-status.md  preflight.md
docs/user/: CLI.md  README.md  architecture.md  cli-contract.md  contract-index.md  http.md  mdns.md  mqtt.md  ntp.md  nvs-schema.md  testing.md  wifi-lifecycle.md
docs/webapp/: index.html  script.js
docs/work/: legacy-current-comparison.md
docs/work/diag/: template_stage1_expected.txt  template_stage4_cli_session.txt  template_stage5_expected_boot.txt
docs/work/diag/audit/: 20260222_165039_compliance_scorecard.md  20260222_165039_verify_adherence.md
docs/work/diag/evidence/20260222_165039/: 90_summary.md  index.md  run_log.txt  run_meta.txt
docs/work/diag/evidence/20260222_172508/: boot_stage5.txt  (+2 more)
docs/work/inv/: hardware-map.md  legacy.md  open-questions.md
docs/work/plan/: 000_bootstrap.md  010_stage_plan.md  020_hil_playbook.md  050_phase2_entry_criteria.md  060_gap_closure_plan.md  070_phase2_overview.md  071_phase2_nvs_schema.md  075_stage5_wifi.md  076_stage5_hil.md  086_stage10_https.md  087_stage10_hil.md  090_main_split_plan.md  091_module_contracts_outline.md  092_next_stages_plan.md  100_post_impl_realignment.md  101_doc_promotion_plan.md  102_test_alignment_plan.md  103_governance_backlog.md
docs/work/tooling/: 20260222_lint_tooling_notes.md  README.md
include/: luce_build.h
include/luce/: boot_diagnostics.h  boot_state.h  cli.h  cli_tcp.h  dht_sensor.h  http_server.h  i2c_io.h  led_status.h  mdns.h  mqtt.h  net_wifi.h  ntp.h  nvs_helpers.h  ota.h  runtime.h  runtime_state.h  stage2_io.h  task_budgets.h  task_runtime.h
scripts/: build.sh  capture_serial.py  collect_logs.sh  flash.sh  http_api_smoke.sh  lint.sh  lint_waivers.txt  luce.sh  monitor.sh  pio_cxx_only_flags.py  spawn_mqtt_broker.sh  test_firmware_net1.sh  test_firmware_stage10.sh  test_layers.py
src/: CMakeLists.txt  app_main.cpp  boot_diagnostics.cpp  boot_state.cpp  cli.cpp  cli_tcp.cpp  dht_sensor.cpp  http_server.cpp  i2c_io.cpp  led_status.cpp  main.cpp  main_runtime.cpp  mdns.cpp  mqtt.cpp  native_build_stub.cpp  net_wifi.cpp  ntp.cpp  ota.cpp  stage2_io.cpp
test/test_unit_native/: test_pure_logic.cpp
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_http_contract.py  test_mqtt_contract.py  test_serial_cli_contract.py  test_tcp_cli_contract.py  test_ws_contract.py
(+130 files in other folders)
